style css with jumbotron and navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,19 +7,21 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <% if user_signed_in? %>
-      Logged in as <strong><%= current_user.email %></strong>.
-      <%= link_to 'Edit profile', edit_user_registration_path %> |
-      <%= link_to "Logout", destroy_user_session_path, method: :delete %>
-    <% else %>
-      <%= link_to "Sign up", new_user_registration_path %> |
-      <%= link_to "Login", new_user_session_path %>
-    <% end %>
 
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
+<%= render 'layouts/navbar' %>
 
-<%= yield %>
 
+  <div class="jumbotron">
+    <div class='container'>
+      <h1>GEEK LOCKER</h1>
+      <p>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+      <p><a class="btn btn-primary btn-lg">Learn more</a></p>
+    </div>
+  </div>
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
+<div class='container'>
+  <%= yield %>
+</div>
 </body>
 </html>
